# bf.cpp

./: .gitmodules  CMakeLists.txt
include/: bf.h
src/: bf.cpp  bfi.cpp
